<resources>
    <string name="app_name">Sweet Baking</string>
    <string name="error_message">Error</string>
    <string name="ingredient_string">Recipe Ingredients</string>

    <!-- RecipeActivity Error Messages -->
    <string name="network_error">No Network \n Click to retry</string>
    <string name="response_error">No Recipes</string>

    <!-- steps error -->
    <string name="no_description">No Description for this step</string>
    <string name="no_measurement_found">No measurement found</string>

    <string name="no_instructions">No instructions this step</string>

    <!-- Strings for Step -->
    <string name="step_paren">") "</string>
    <string name="next_step">Next Step</string>
    <string name="previous_step">Previous Step</string>
    <string name="no_media_picture">Picture of cupcake, there is no video to play</string>

    <!-- Widget Text -->
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- Titles for menu -->
    <string name="nutella_pie">Nutella Pie</string>
    <string name="brownies">Brownies</string>
    <string name="yellow_cake">Yellow Cake</string>
    <string name="cheesecake">CheeseCake</string>
    <string name="recipe_for_homescreen">Recipe for Homescreen</string>

    <!-- Check if this is a tablet -->
    <bool name="is_tablet">false</bool>

</resources>
